--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.22.11",
+    "async-exit-hook": "^2.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.10.1",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0"
   },
