--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "main": "src/server.js",
   "scripts": {
     "lint": "eslint src --ext js --report-unused-disable-directives --max-warnings 0",
-    "clean": "rm -rf build && mkdir build",
+    "clean": "rimraf build && mkdir build",
     "build-babel": "babel ./src -d ./build/src",
     "build": "npm run clean && npm run build-babel",
-    "production": "npm run build && node ./build/src/server.js",
-    "dev": "nodemon --exec babel-node ./src/server.js"
+    "production": "npm run build && cross-env BUILD_MODE=production node ./build/src/server.js",
+    "dev": "cross-env BUILD_MODE=dev nodemon --exec babel-node ./src/server.js"
   },
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.22.11",
     "async-exit-hook": "^2.0.1",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "joi": "^17.10.1",
+    "http-status-codes": "^2.3.0",
+    "joi": "^17.12.0",
+    "lodash": "^4.17.21",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0"
   },
@@ -30,6 +34,7 @@
     "@babel/preset-env": "^7.22.10",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.48.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "rimraf": "^5.0.5"
   }
 }
