--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/runtime": "^7.22.11",
     "async-exit-hook": "^2.0.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
@@ -25,6 +26,8 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "socket.io": "^4.7.5"
   },
   "author": "nguyendoquangminh222@gmail.com",
